<resources>
    <string name="app_name">My Pay</string>
    <string name="text_btn_create_account">Criar carteira</string>
    <string name="hint_text_input_amount">Quantidade</string>
    <string name="hint_text_input_email">Email</string>
    <string name="hint_text_input_password">Senha</string>
    <string name="hint_text_input_repeat_password">Repita a senha</string>
    <string name="text_create_account">Criar conta</string>
    <string name="title_activity_user_auth">Login</string>
    <!-- Strings related toObject login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="text_account_created_successfully">Conta criada com sucesso.</string>
    <string name="text_account_created_failure">Erro ao tentar criar a conta. Tente novamente.</string>
    <string name="text_btn_login">Entrar</string>
    <string name="text_auth_failure">Erro ao tentar realizar o login.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_workspace">Minha Carteira</string>
    <string name="text_btn_exchange">TROCAR</string>
    <string name="text_btn_sell">VENDER</string>
    <string name="text_btn_buy">COMPRAR</string>
    <string name="label_amount_bitcoin">Total em Bitcoin</string>
    <string name="label_amount_brita">Total em BRITA</string>
    <string name="label_amount_brl">Total em BRL</string>
    <string name="text_bitcoin_wallet_credit">Comprar Bitcoin</string>
    <string name="text_brita_wallet_credit">Comprar Brita</string>
    <string name="text_bitcoin_wallet_debit">Vender Bitcoin</string>
    <string name="text_brita_wallet_debit">Vender Brita</string>
    <string name="transaction_was_performed">Transacão realizada com sucesso.</string>
    <string name="text_bitcoin_wallet_exchange">Trocar por brita</string>
    <string name="text_brita_wallet_exchange">trocar por bitcoin</string>
    <string name="title_menu_item_report">Relatório</string>
    <string name="title_menu_item_logout">Sair</string>
</resources>
