<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        tools:context=".feature.createAccountOrUserAuth.CreateAccountOrUserAuth">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/app_name"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="@+id/card"
            app:layout_constraintStart_toStartOf="@+id/card"
            app:layout_constraintTop_toTopOf="@+id/card" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="217dp"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/text_btn_create_account"
            app:layout_constraintEnd_toEndOf="@+id/card"
            app:layout_constraintStart_toStartOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_btn_login"
            app:layout_constraintEnd_toEndOf="@+id/card"
            app:layout_constraintStart_toStartOf="@+id/card"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="295dp"
            android:layout_height="204dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="-1dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>