<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.mofaia.mypay.app.feature.workspace.WorkspaceViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_dark"
        tools:context=".feature.workspace.WorkspaceActivity">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.90" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="84dp"
            android:layout_marginTop="40dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView3"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_marginTop="32dp"
            app:cardCornerRadius="10dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintStart_toStartOf="@+id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/cardView2" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:text="@string/label_amount_brl"
            app:layout_constraintStart_toStartOf="@+id/cardView"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:text="@string/label_amount_brita"
            app:layout_constraintStart_toStartOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:elevation="2dp"
            android:text="@string/label_amount_bitcoin"
            app:layout_constraintStart_toStartOf="@+id/cardView3"
            app:layout_constraintTop_toTopOf="@+id/cardView3" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:elevation="2dp"
            tools:text="R$ 100.000,00"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/cardView" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:elevation="2dp"
            tools:text="R$ 0,00"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toTopOf="@+id/cardView2" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:elevation="2dp"
            tools:text="R$ 0,00"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toTopOf="@+id/cardView3" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:text="@string/text_btn_buy"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintStart_toStartOf="@+id/guideline_left" />

        <Button
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:background="@android:color/transparent"
            android:text="@string/text_btn_buy"
            app:layout_constraintBottom_toBottomOf="@+id/cardView3"
            app:layout_constraintStart_toStartOf="@+id/cardView3" />

        <Button
            android:id="@+id/button8"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:text="@string/text_btn_sell"
            app:layout_constraintEnd_toStartOf="@+id/button9"
            app:layout_constraintStart_toEndOf="@+id/button7"
            app:layout_constraintTop_toTopOf="@+id/button7" />

        <Button
            android:id="@+id/button9"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:text="@string/text_btn_exchange"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toTopOf="@+id/button8" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:text="@string/text_btn_sell"
            app:layout_constraintEnd_toStartOf="@+id/button6"
            app:layout_constraintStart_toEndOf="@+id/button4"
            app:layout_constraintTop_toTopOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/transparent"
            android:text="@string/text_btn_exchange"
            app:layout_constraintEnd_toStartOf="@+id/guideline_right"
            app:layout_constraintTop_toTopOf="@+id/button5" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            tools:text="R$ 2,00"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="@+id/button4"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="@+id/button4" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            tools:text="R$ 2,00"
            android:textColor="@android:color/holo_red_light"
            app:layout_constraintBottom_toTopOf="@+id/button7"
            app:layout_constraintEnd_toEndOf="@+id/button7"
            app:layout_constraintHorizontal_bias="0.463"
            app:layout_constraintStart_toStartOf="@+id/button7" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            tools:text="R$ 2,00"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintBottom_toTopOf="@+id/button5"
            app:layout_constraintEnd_toEndOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/button5" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="2dp"
            tools:text="R$ 2,00"
            android:textColor="@android:color/holo_green_dark"
            app:layout_constraintBottom_toTopOf="@+id/button8"
            app:layout_constraintEnd_toEndOf="@+id/button8"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/button8" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>